--- a/blog/config/style.css
+++ b/blog/config/style.css
@@ -1,5 +1,11 @@
-body {
+/* STYLE.CSS BLOG */
+
+html {
+    background-image: url("http://trrb.xyz/img/rain.gif");
     background-color: black;
+}
+
+body {
     color: white;
     font-family: monospace;
 }
@@ -11,8 +17,13 @@ body {
 }
 
 a {
-    color: #9ae29a;
+    color: #5c9cfc;
 }
+
+a:hover {
+    color: white;
+}
+
 
 #navbar a {
     color: white;
@@ -38,7 +49,7 @@ a {
 }
 
 #navbar a:hover {
-    color: #77b177;
+    color: #5c9cfc;
 }
 
 #presentation {
@@ -53,44 +64,98 @@ a {
     text-align: center;
 }
 
-#presentation p {
-    border-top: 1px solid #24292f33;
-    padding-top: 15px;
+.mainpage {
+    background-color: black;
+    border: 1px solid #5c9cfc;
     max-width: 500px;
-    display: block;
+    margin: auto;
+    margin-top: 100px;
+    padding-bottom: 15px;
 }
 
-.footer ul {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
+#presentation p {
+    border-top: 1px solid #24292f33;
+    max-width: 500px;
+    display: block;
+    padding: 15px;
+}
+
+.banner-footer ul {
     border-top: 1px solid #24292f33;
     padding-top: 15px;
     padding-bottom: 15px;
     color: #57667A;
     font-size: 12px;
-    width: 700px;
+    width: 500px;
+    padding: 0;
     margin: auto;
     text-align: center;
 }
 
-.footer li {
+.banner-footer li {
     list-style-type: none;
     display: inline;
     padding-right: 0;
 }
 
-.footer img {
+.banner-footer img {
     width: 80px; 
     height: auto;
     text-align: center;
 }
 
 .projects-list ul {
-    width: 600px;
+    width: 400px;
+    padding: 0;
 }
 
-.content {
-    text-align: left;
+.ring-list ul {
+    width: 500px;
+    padding: 0;
+}
+
+.ring-list ul li {
+    display: inline-block;
+}
+
+.footer {
+    margin-top: 10px;
+    width: 100%;
+    height: 6px;
+    padding-bottom: 3px;
+}
+
+.footer ul {
+    border-top: 1px solid #5c9cfc;
+    padding: 0;
+    text-align: center;
+    padding-top: 3px;
+    padding-left: 20px;
+}
+
+.footer ul li {
+    list-style-type: none;
+    display: inline-block;
+}
+
+.footer li:last-of-type {
+    float: right;
+    padding-right: 5px;
+}
+
+.footer a {
+    color: white;
+}
+
+.version a {
+    color:#3582fc;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    color: #5c9cfc;
+}
+
+.version a:hover {
+    color: white;
 }
