--- a/v1/style.css
+++ b/v1/style.css
@@ -1,9 +1,5 @@
-html {
-    background-image: url("img/rain.gif");
-    background-color: black;
-}
-
 body {
+    background-color: black;
     color: white;
     font-family: monospace;
 }
@@ -15,13 +11,8 @@ body {
 }
 
 a {
-    color: #5c9cfc;
+    color: #9ae29a;
 }
-
-a:hover {
-    color: white;
-}
-
 
 #navbar a {
     color: white;
@@ -47,7 +38,7 @@ a:hover {
 }
 
 #navbar a:hover {
-    color: #5c9cfc;
+    color: #77b177;
 }
 
 #presentation {
@@ -62,49 +53,42 @@ a:hover {
     text-align: center;
 }
 
-.mainpage {
-    background-color: black;
-    border: 1px solid #5c9cfc;
-    max-width: 500px;
-    margin: auto;
-    margin-top: 100px;
-    padding-bottom: 15px;
-}
-
 #presentation p {
     border-top: 1px solid #24292f33;
+    padding-top: 15px;
     max-width: 500px;
     display: block;
-    padding: 15px;
 }
 
-.banner-footer ul {
+.footer ul {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
     border-top: 1px solid #24292f33;
     padding-top: 15px;
     padding-bottom: 15px;
     color: #57667A;
     font-size: 12px;
-    width: 500px;
-    padding: 0;
+    width: 700px;
     margin: auto;
     text-align: center;
 }
 
-.banner-footer li {
+.footer li {
     list-style-type: none;
     display: inline;
     padding-right: 0;
 }
 
-.banner-footer img {
+.footer img {
     width: 80px; 
     height: auto;
     text-align: center;
 }
 
 .projects-list ul {
-    width: 400px;
-    padding: 0;
+    width: 600px;
 }
 
 .ring-list ul {
@@ -114,46 +98,4 @@ a:hover {
 
 .ring-list ul li {
     display: inline-block;
-}
-
-.footer {
-    margin-top: 10px;
-    width: 100%;
-    height: 6px;
-    padding-bottom: 3px;
-}
-
-.footer ul {
-    border-top: 1px solid #5c9cfc;
-    padding: 0;
-    text-align: center;
-    padding-top: 3px;
-    padding-left: 20px;
-}
-
-.footer ul li {
-    list-style-type: none;
-    display: inline-block;
-}
-
-.footer li:last-of-type {
-    float: right;
-    padding-right: 5px;
-}
-
-.footer a {
-    color: white;
-}
-
-.version a {
-    color:#3582fc;
-    text-decoration: none;
-}
-
-.footer a:hover {
-    color: #5c9cfc;
-}
-
-.version a:hover {
-    color: white;
 }
